# natural-shift-planner

./: CLAUDE.md  Makefile  README.md  infrastructure-pipeline-failure-bug-report.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: application.yml  infrastructure.yml
docker/: .env.docker
docker/compose/: docker-compose.mcp.yml  docker-compose.n8n.yml  docker-compose.prod.yml  docker-compose.yml
docker/dockerfiles/: Dockerfile.api  Dockerfile.mcp  Dockerfile.mcp.http  Dockerfile.mcp.sse
infrastructure/: pyproject.toml  requirements.txt
infrastructure/modules/: container_apps.py  container_registry.py  resource_group.py  storage.py
scripts/: docker_mcp.sh  mock_mcp_server.py  run-mcp-server.sh  test_mcp_connection.sh
src/shift_agent/api/: server.py
