[project]
name = "shift-scheduler-infra"
version = "0.1.0"
description = "Infrastructure as code for Shift Scheduler application using Azure"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-azure-native>=2.0.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]